Styled the tour component

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,5 +12,5 @@ $mainGrey: #ececec;
 body {
   font-family: "Cormorant Garamond", serif;
   background: $mainGrey;
-  color: $mainGreen;
+  color: $mainBlack;
 }
