--- a/src/components/Tour/Tour.scss
+++ b/src/components/Tour/Tour.scss
@@ -1,6 +1,7 @@
 @import "../../index.scss";
 
 .tour {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   background: $mainWhite;
   border-radius: 0.8rem;
   margin: 1rem 0;
@@ -9,5 +10,49 @@
     border-top-left-radius: 0.8rem;
     border-top-right-radius: 0.8rem;
     display: block;
+  }
+}
+.img-container {
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  display: block;
+  top: 5%;
+  right: 5%;
+  color: $mainWhite;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: all 0.3s linear;
+  opacity: 0;
+}
+
+.img-container:hover .close-btn {
+  opacity: 1;
+}
+
+.tour-info {
+  padding: 1rem 0.5rem;
+
+  h3 {
+    text-transform: uppercase;
+    color: $mainGreen;
+  }
+
+  h4 {
+    text-transform: capitalize;
+    color: $mainBlack;
+    margin: 0.2rem 0 0.6rem 0;
+  }
+
+  h5 {
+    text-transform: capitalize;
+    span {
+      color: $mainGreen;
+      margin: 0.5rem;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
   }
 }
